--- a/app/src/main/res/layout/activity_retailer_dashboard.xml
+++ b/app/src/main/res/layout/activity_retailer_dashboard.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/appBG"
+        android:background="#E82B2727"
         android:animateLayoutChanges="true"
         android:fitsSystemWindows="true">
 
