--- a/app/src/main/res/layout/single_product_detail.xml
+++ b/app/src/main/res/layout/single_product_detail.xml
@@ -39,6 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product Name"
+            android:fontFamily="@font/carter_one"
+            android:textSize="15sp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -64,6 +66,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:padding="5dp"
+            android:fontFamily="@font/carter_one"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/specialBtn"
