--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/orderHistory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/LogOut"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -42,6 +43,16 @@
         android:text="@string/log_out"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/bushGreen"
+        app:layout_constraintBottom_toBottomOf="@+id/orderHistory"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/orderHistory"
+        app:layout_constraintTop_toTopOf="@+id/orderHistory" />
 
     <View
         android:id="@+id/view"
