minor good to feel changes

--- a/app/src/main/res/layout/single_product_detail.xml
+++ b/app/src/main/res/layout/single_product_detail.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:fontFamily="@font/carter_one"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline5"
@@ -53,7 +53,7 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:padding="5dp"
-            android:textColor="@color/white"
+            android:textColor="@color/lightBrown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline5"
             app:layout_constraintTop_toBottomOf="@+id/ProductName"
