looks like just final push

--- a/app/src/main/res/layout/single_product_detail.xml
+++ b/app/src/main/res/layout/single_product_detail.xml
@@ -25,14 +25,11 @@
             android:layout_height="100dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:elevation="50dp"
-            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ProductName"
