--- a/app/src/main/res/layout/add_new_product_bottomsheet.xml
+++ b/app/src/main/res/layout/add_new_product_bottomsheet.xml
@@ -140,10 +140,10 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="30dp"
+            android:layout_marginBottom="30dp"
             android:scaleType="centerCrop"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
