--- a/app/src/main/res/layout/product_detail_single.xml
+++ b/app/src/main/res/layout/product_detail_single.xml
@@ -25,15 +25,11 @@
             android:layout_height="100dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:elevation="50dp"
-            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/waranty_badge"
-            app:tint="@color/white" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ProductName"
@@ -65,8 +61,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:gravity="center"
             android:fontFamily="@font/carter_one"
+            android:gravity="center"
             android:padding="5dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
