--- a/app/src/main/res/layout/activity_retailer_dashboard.xml
+++ b/app/src/main/res/layout/activity_retailer_dashboard.xml
@@ -80,7 +80,7 @@
                         android:paddingHorizontal="15dp"
                         android:paddingVertical="15dp"
                         android:tag="sticky"
-                        android:text="Listed Items"
+                        android:text="@string/listed_items"
                         android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textColor="@color/black"
@@ -111,7 +111,7 @@
                         android:paddingHorizontal="15dp"
                         android:paddingVertical="15dp"
                         android:tag="sticky"
-                        android:text="UnSigned Items"
+                        android:text="@string/un_signed_items"
                         android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textColor="@color/black"
@@ -140,7 +140,7 @@
                         android:paddingHorizontal="15dp"
                         android:paddingVertical="15dp"
                         android:tag="sticky"
-                        android:text="Signed Items"
+                        android:text="@string/signed_items"
                         android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textColor="@color/black"
