--- a/app/src/main/res/layout/product_detail_single.xml
+++ b/app/src/main/res/layout/product_detail_single.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:paddingStart="15dp"
         android:paddingTop="15dp"
-        android:paddingRight="5dp"
+        android:paddingEnd="5dp"
         android:paddingBottom="15dp">
 
         <ImageView
@@ -29,14 +29,15 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/ProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/carter_one"
-            android:text="Product Name"
+            tools:text="Product Name"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:background="@drawable/white_premium_btn"
-            android:text="Buy Now"
+            android:text="@string/buy_now"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -86,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:background="@null"
-            android:text="Delete"
+            android:text="@string/delete"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
