--- a/app/src/main/res/layout/add_new_product_bottomsheet.xml
+++ b/app/src/main/res/layout/add_new_product_bottomsheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -85,6 +86,7 @@
                 android:hint="@string/product_description"
                 android:inputType="text"
                 android:textColor="@color/lightBrown"
+                android:importantForAutofill="no"
                 app:hintTextColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,8 +106,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="@string/price"
-                android:inputType="text"
+                android:importantForAutofill="no"
                 android:textColor="@color/lightBrown"
+                android:inputType="number"
                 app:hintTextColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -150,7 +153,8 @@
             app:layout_constraintEnd_toStartOf="@+id/addProductBtn"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/productPriceLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/productPriceLayout"
+            tools:ignore="ContentDescription" />
 
         <ImageButton
             android:id="@+id/deleteBtn"
@@ -162,7 +166,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:srcCompat="@drawable/ic_baseline_delete_outline_24" />
+            app:srcCompat="@drawable/ic_baseline_delete_outline_24"
+            tools:ignore="ContentDescription" />
 
 
         <Button
