--- a/app/src/main/res/layout/fragment_warranty_scanner.xml
+++ b/app/src/main/res/layout/fragment_warranty_scanner.xml
@@ -10,32 +10,8 @@
         android:fitsSystemWindows="true"
         android:theme="@style/Theme.FlipWarranty">
 
-        <!--        <androidx.appcompat.widget.Toolbar-->
-        <!--            android:id="@+id/toolbar"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:background="@color/black"-->
-        <!--            android:minHeight="?attr/actionBarSize"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent">-->
-
-        <!--            <TextView-->
-        <!--                android:id="@+id/title"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:fontFamily="@font/aladin"-->
-        <!--                android:text="@string/cryptic_warranty"-->
-        <!--                android:textColor="@color/white"-->
-        <!--                android:textSize="25sp"-->
-        <!--                tools:layout_editor_absoluteX="115dp"-->
-        <!--                tools:layout_editor_absoluteY="15dp" />-->
-
-        <!--        </androidx.appcompat.widget.Toolbar>-->
-
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/scanQRbtn"
+            android:id="@+id/scanQrBtn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="50dp"
@@ -73,7 +49,7 @@
             android:id="@+id/serialEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:hint="@string/enter_serial_number"
             android:minHeight="38dp"
             android:textColorHint="#C1BEBE"
@@ -81,6 +57,8 @@
             app:layout_constraintEnd_toStartOf="@+id/searchWithSerialNumber"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:importantForAutofill="no"
+            android:inputType="text"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <androidx.appcompat.widget.AppCompatButton
