--- a/app/src/main/res/layout/get_warranty.xml
+++ b/app/src/main/res/layout/get_warranty.xml
@@ -35,7 +35,7 @@
         </androidx.appcompat.widget.Toolbar>
 
         <Button
-            android:id="@+id/scanQRbtn"
+            android:id="@+id/scanQrBtn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="80dp"
